# event-data-ingest

./: .mypy.ini  Dockerfile  README.md  combine.Dockerfile  pyproject.toml  setup.sh  tox.ini
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: runner-fetch.md  runner-normalize.md  runner-parse.md
.github/workflows/: lint.yml
event_data_ingest/: cli.py  vial.py
event_data_ingest/runners/_shared/: fetch.py  normalize.py  parse.py
event_data_ingest/runners/_template/: normalize.py  parsehtml.py
event_data_ingest/stages/: enrichment.py  ingest.py  load.py  site.py
event_data_ingest/utils/: jsonserial.py  log.py  match.py  normalize.py  validation.py
housing_data_ingest/: cli.py
housing_data_ingest/runners/_template/: fetch.sh  parse.py
housing_data_ingest/stages/: enrichment.py  ingest.py
housing_data_ingest/utils/: log.py
tests/: conftest.py
tests/stages/: test_caching.py  test_enrichment.py
tests/utils/: test_location_id_from_name.py  test_match.py  test_misc.py  test_normalize.py  test_normalize_address.py  test_normalize_phone.py  test_provider_id_from_name.py  test_utils_validation.py
vaccine_feed_ingest/: cli.py  vial.py
vaccine_feed_ingest/runners/_shared/: fetch.py  parse.py
vaccine_feed_ingest/runners/_template/: README.md  normalize.py
vaccine_feed_ingest/runners/apex/: fetch.sh
vaccine_feed_ingest/runners/hill/: fetch.sh
vaccine_feed_ingest/runners/lodge/: fetch.sh
vaccine_feed_ingest/runners/marshall/: fetch.sh
vaccine_feed_ingest/runners/rit/: fetch.sh
vaccine_feed_ingest/stages/: enrichment.py  load.py  site.py
(+40 files in other folders)
